--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,26 @@ body{
     color: #39a6b2;
    /* background-color: rgba(19, 22, 22, 0.644); */
 }
+
+/* HEADER STYLING  */
 header{
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
  header a {
     text-decoration: none;   /* got rid of the link underlines */
     color: #fce138;
 }
 header nav{
-    float: right;
     margin: 7px 0;
 }
 header nav ul li{
