--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;  /*vw = viewpoint width*/
 }
@@ -56,6 +56,7 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
   .hero-form {
     background-color: #fce138;
@@ -96,7 +97,7 @@ section{
       margin: 3.5%;
       color: #fff;
       font-size: 18px;
-      line-height: 1.3;
+      line-height: 1.2;
   }
   .hero-cta h2{
       font-style: italic;
@@ -106,7 +107,7 @@ section{
   /* end hero section style */
 
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -291,8 +292,19 @@ footer {
     color: #024e76;
   }
 
-  *{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+
+    
+}
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+
+    
+}
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+
+    
+}
