--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,21 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
  header a {
     text-decoration: none;   /* got rid of the link underlines */
@@ -41,6 +50,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;  /*vw = viewpoint width*/
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 section{
@@ -57,9 +73,11 @@ section{
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
   }
   .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     /*border-style: solid;
@@ -67,7 +85,9 @@ section{
     border-color: #024e76;*/
     border: solid 3px #024e76;
     width: 40%;
-    margin: 3.5%; 
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px; 
   }
   .hero-form p{
       margin: 5px 0 15px 0;
@@ -80,6 +100,12 @@ section{
       color: #024e76;
       width: 100%;
       margin-bottom: 15px;
+      border-radius: 10px;
+      background-color: rgba(255,255,255, 0.75);
+  }
+  .form-input:focus {
+      background-color: rgba(255,255,255, 1);
+      outline: none;
   }
   .hero-form label{
       margin: 0 5px;
@@ -90,6 +116,10 @@ section{
       border: none;
       padding: 10px 20px;
       font-size: 16px;
+      border-radius: 10px;
+  }
+  .hero-form button:hover {
+      background-color: #39a6b2;
   }
   .hero-cta{
       width: 35%;
@@ -103,6 +133,7 @@ section{
       font-style: italic;
       font-size: 55px;
       color: #fce138;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   /* end hero section style */
 
@@ -145,12 +176,16 @@ section{
       margin: 50px auto;
       padding-bottom: 50px;
       width: 80%;
-      border-bottom: 1px solid #39a6b2;
+      /* border-bottom: 1px solid #39a6b2; */
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
   }
+  .step:not(:last-child){
+      border-bottom: 1px solid #39a6b2;
+  }
+  
   .step h3 {
       color: #024e76;
       font-size: 46px;
@@ -259,6 +294,12 @@ section{
       width: 100%;
       margin-bottom: 15px;
       margin-top: 5px;  
+      border-radius: 10px;
+      background-color: rgba(255,255,255, 0.75);
+  }
+  .contact-form input:focus, .contact-form textarea:focus{
+      background-color: rgba(255,255,255, 1);
+      outline: none;
   }
   .contact-form button {
     width: 100%;
@@ -268,6 +309,10 @@ section{
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+  }
+  .contact-form button:hover {
+      color: #fce138;
+      background: #39a6b2;
   }
 
   /*REACH OUT STYLES END */
@@ -298,6 +343,7 @@ footer {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
@@ -312,6 +358,7 @@ footer {
     header nav ul li a {
         font-size: 20px;
     }
+    
 
     footer h2, footer div {
         text-align: center;
